Bug 564115 - activating the browser window scrolls the document (to show the focused text control); r=roc